Archive2/fc/cd31eb37c148c3/output
main.cpp:3:1: error: 'uint32_t' does not name a type
 uint32_t OnesComplementSum(const uint8_t * data, int length, uint32_t sum = 0)
 ^
